<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/albumback"
    >

    <RelativeLayout
        android:id="@+id/showallphoto_headview"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/theme_blue"
        android:gravity="center_vertical"
        >
        <Button
            android:background="@null"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="14sp"
            android:textColor="#fff"
            android:id="@+id/showallphoto_back"
            android:text="@string/album"
            />
         <TextView
            android:id="@+id/showallphoto_headtitle"
            android:layout_width="wrap_content" 
       		android:layout_height="wrap_content" 
       		android:text="@string/photo"
       		android:layout_centerInParent="true"
       		android:singleLine="true"
       		android:textSize="20sp"		
			android:textColor="#ffffff"
            />
        
        <Button
            android:layout_width="67dp" 
      	    android:layout_height="wrap_content"
      	    android:layout_alignParentRight="true" 
      	    android:layout_centerVertical="true"
      	    android:layout_marginRight="5dp"
            android:id="@+id/showallphoto_cancel"
            android:text="@string/camera_cancel"
            android:textColor="#fff"
        	android:textSize="15dp"
			android:background="@null"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/showallphoto_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/theme_blue" >

        <Button
            android:id="@+id/showallphoto_preview"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/preview"
            android:background="@null"
            />
        <Button
            android:id="@+id/showallphoto_ok_button"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/unfinished"
            android:background="@null"
            android:gravity="center"
            />
    </RelativeLayout>

    <GridView
        android:id="@+id/showallphoto_myGrid"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/showallphoto_bottom_layout"
        android:layout_below="@id/showallphoto_headview"
        android:layout_centerInParent="true"
        android:horizontalSpacing="2dp"
        android:numColumns="3"
        android:verticalSpacing="2dp"
        android:background="@color/black" />

    <ProgressBar
        android:id="@+id/showallphoto_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>