<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/black">

    <RelativeLayout
        android:id="@+id/headview"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/theme_blue"
        android:gravity="center_vertical">
        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#fff"
            android:id="@+id/back"
            android:text="@string/album"
            android:background="@null"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_centerVertical="true"
            />
        <Button
            android:layout_width="67dp" 
      	    android:layout_height="wrap_content"
        	android:textSize="14sp"
        	android:textColor="#fff"
        	android:id="@+id/cancel"
        	android:text="@string/camera_cancel"
        	android:background="@null"
      	    android:layout_centerVertical="true"
      	    android:layout_marginRight="5dp"
            android:layout_alignParentRight="true" 
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/theme_blue">
 		<Button
            android:id="@+id/preview"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/preview"            
            android:background="@null"
            />
        <Button
            android:id="@+id/ok_button"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@null"
            />
    </RelativeLayout>

    <GridView
        android:id="@+id/myGrid"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottom_layout"
        android:layout_below="@id/headview"
        android:layout_centerInParent="true"
        android:horizontalSpacing="2dp"
        android:numColumns="3"
        android:verticalSpacing="2dp"
        android:background="@color/black" />
    <TextView
        android:id="@+id/myText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_photo" 
        android:textColor="@color/black" />

</RelativeLayout>